--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
 		<!-- <script>require('js/main.js')</script> -->
 	</head>
 
-	<body class="dark select-none">
+	<body class="dark select-none bg-neutral-700">
 		<!-- background, container for all nodes -->
 		<main
 			class="has-scrolling w-screen h-screen min-h-fit overflow-x-hidden overflow-y-auto dark:bg-neutral-700 dark:text-white grid grid-cols-1 grid-rows-6"
@@ -29,7 +29,7 @@
 				</div>
 				<div
 					id="tasklist"
-					class="m-4 flex flex-col flex-nowrap items-start space-y-4"
+					class="m-4 grid grid-cols-1 xl:grid-cols-2 grid-flow-row gap-4"
 				></div>
 			</div>
 		</main>
